# rust-lambda

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
app/: Cargo.toml
app/src/: lib.rs
lib/: rust-lambda-stack.ts
