[package]
name = "rust-lambda"
version = "0.1.0"
authors = ["Paweł Motyl <pawmot@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { package = "netlify_lambda", version = "0.2.0" }
lambda_http = { package = "netlify_lambda_http", version = "0.2.0" }
tokio = "1.2.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"

